added login / register forms

--- a/src/components/Header/Navbar.module.css
+++ b/src/components/Header/Navbar.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   padding: 20px;
-  background-color: rgb(241, 239, 239);
+  background-color: #fff;
   box-shadow: 1px 1px 3px gray;
 }
 
