--- a/src/components/Header/Navbar.module.css
+++ b/src/components/Header/Navbar.module.css
@@ -1,6 +1,7 @@
 .container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 20px;
   background-color: #fff;
   box-shadow: 1px 1px 3px gray;
