added ad item form

--- a/src/components/UI/Inputs/Input.module.css
+++ b/src/components/UI/Inputs/Input.module.css
@@ -18,7 +18,7 @@
 }
 
 .input-group textarea {
-  font-family: Lato;
+  font-family: "Montserrat", sans-serif;
   font-size: 13px;
   color: #333;
   font-weight: normal;
