--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -4,9 +4,7 @@
   width: 100%;
   height: 40px;
   padding-top: 10px;
-  position: absolute;
-  bottom: 0;
-  left: 0;
+  position: relative;
   text-align: center;
 }
 
