--- a/src/components/Forms/AddItemForm.module.css
+++ b/src/components/Forms/AddItemForm.module.css
@@ -25,5 +25,11 @@
 }
 
 .formContainer textarea {
-  font-size: 20px;
+  font-size: 13px;
+}
+
+.formContainer select {
+  margin: 10px 0;
+  padding: 10px;
+  width: 40%;
 }
