--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,14 +1,35 @@
-.container {
-  border-top: solid 1px;
-  background: #333;
-  width: 100%;
-  height: 40px;
-  padding-top: 10px;
-  position: relative;
+.footer {
   text-align: center;
+  margin-top: 20px;
+  padding: 20px;
+  background-color: #333;
+  position: relative;
   bottom: 0;
+  left: 0;
+  width: 100%;
 }
 
-.container h4 {
+.container {
+  display: flex;
+  justify-content: space-between;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 120px;
+}
+
+.footer h4 {
   color: #fff;
+  font-weight: normal;
+}
+
+@media (max-width: 800px) {
+  .footer .container {
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+  }
+
+  .footer h4 {
+    margin-top: 10px;
+  }
 }
