--- a/src/components/Header/Navbar.module.css
+++ b/src/components/Header/Navbar.module.css
@@ -1,27 +1,117 @@
-.container {
+.navContainer {
   display: flex;
+  padding: 10px 20px;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
-  background-color: #fff;
+  position: relative;
+  flex-wrap: wrap;
   box-shadow: 1px 1px 3px gray;
+  background-color: #fff;
 }
 
-.container img {
+.navContainer img {
+  display: flex;
   width: 150px;
 }
 
-.container nav a {
+.navContainer nav a {
   margin: 10px;
   font-size: 18px;
   transition: 0.3s ease-in;
   font-weight: bold;
 }
 
-.container a:hover {
+.navContainer a:hover {
   color: #1aa78e;
 }
 
-.container button {
+.navContainer button {
   margin-left: 10px;
+}
+
+.navContainer i {
+  color: #333;
+}
+
+.links {
+  display: flex;
+  align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.checkbox {
+  display: none;
+}
+
+.checkbox:checked ~ .burger i {
+  color: #333;
+}
+
+.burger {
+  cursor: pointer;
+  font-size: 1.5rem;
+  display: none;
+  width: 100%;
+  text-align: center;
+}
+
+.burger:hover i {
+  color: rgb(192, 192, 192);
+}
+
+@media (max-width: 800px) {
+  .imageContainer {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin-top: 20px;
+  }
+  .navContainer {
+    padding: 0 10px;
+  }
+
+  .navLink {
+    padding: 10px 5px;
+  }
+
+  .links {
+    width: 100%;
+    justify-content: center;
+  }
+}
+
+@media (max-width: 450px) {
+  .imageContainer {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin-top: 20px;
+  }
+
+  .checkbox:checked ~ .links {
+    display: none;
+  }
+
+  .burger {
+    margin: 0 0 0 auto;
+    display: block;
+    padding: 25px;
+  }
+
+  .links {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .navContainer {
+    padding: 0 10px;
+  }
+
+  .navLink {
+    width: 100%;
+    text-align: center;
+    padding: 5px 0;
+  }
 }
