--- a/src/components/BigComponents/Sections/Left/MiddleSection.module.css
+++ b/src/components/BigComponents/Sections/Left/MiddleSection.module.css
@@ -20,3 +20,23 @@
   text-align: justify;
   font-weight: normal;
 }
+
+@media (max-width: 800px) {
+  .container {
+    height: 300px;
+  }
+
+  .container img {
+    max-height: 100%;
+  }
+}
+
+@media (max-width: 450px) {
+  .container {
+    height: 300px;
+  }
+
+  .container img {
+    height: 300px;
+  }
+}
