--- a/src/components/BigComponents/Sections/Right/ProductInfoSingle.module.css
+++ b/src/components/BigComponents/Sections/Right/ProductInfoSingle.module.css
@@ -1,9 +1,12 @@
 .container {
   display: flex;
   flex-direction: column;
-  margin-top: 20px;
   border-bottom: 1px solid #bbbbbb;
   width: 100%;
+}
+
+.container:last-child {
+  border-bottom: none;
 }
 
 .highlight {
@@ -13,5 +16,6 @@
 
 .specifics {
   display: flex;
+  align-items: center;
   margin: 20px 20px;
 }
