--- a/src/components/BigComponents/SingleAd.module.css
+++ b/src/components/BigComponents/SingleAd.module.css
@@ -4,7 +4,7 @@
 }
 
 .containerLeft {
-  margin: 20px 0;
+  margin: 20px 0 0 0;
   background-color: #fff;
   border: 1px solid #bbbbbb;
   padding: 60px 40px;
@@ -14,4 +14,57 @@
 
 .rightContainer {
   max-width: 230px;
+}
+
+@media (max-width: 1200px) {
+  .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    padding: 0;
+    max-width: 100%;
+    min-width: 80%;
+  }
+
+  .containerLeft {
+    min-width: 748px;
+    max-width: 80%;
+  }
+
+  .rightContainer {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+
+  .rightContainer {
+    max-width: 100%;
+    min-width: 80%;
+  }
+}
+
+@media (max-width: 800px) {
+  .containerLeft {
+    min-width: 494px;
+  }
+  .rightContainer {
+    display: flex;
+    flex-direction: column;
+    max-width: 100%;
+  }
+}
+
+@media (max-width: 500px) {
+  .container {
+    width: 100%;
+  }
+
+  .rightContainer {
+    min-width: 100%;
+  }
+
+  .containerLeft {
+    min-width: 100%;
+  }
 }
