--- a/src/components/Forms/RegisterForm.module.css
+++ b/src/components/Forms/RegisterForm.module.css
@@ -1,3 +1,8 @@
+.container {
+  display: flex;
+  justify-content: center;
+}
+
 .formContainer {
   display: flex;
   justify-content: center;
@@ -8,6 +13,7 @@
   margin: 50px 0;
   padding: 50px;
   border-radius: 5px;
+  min-width: 100%;
 }
 
 .formContainer h1 {
