--- a/src/components/BigComponents/Sections/Left/MiddleSection.module.css
+++ b/src/components/BigComponents/Sections/Left/MiddleSection.module.css
@@ -1,14 +1,17 @@
 .container {
   display: flex;
   justify-content: center;
+  align-items: center;
   background-color: rgb(226, 226, 226);
   margin-top: 20px;
   border-radius: 5px;
+  width: 100%;
+  height: 500px;
 }
 
 .container img {
   width: auto;
-  height: 500px;
+  height: 400px;
 }
 
 .description {
@@ -23,11 +26,11 @@
 
 @media (max-width: 800px) {
   .container {
-    height: 300px;
+    height: 400px;
   }
 
   .container img {
-    max-height: 100%;
+    height: 250px;
   }
 }
 
@@ -37,6 +40,6 @@
   }
 
   .container img {
-    height: 300px;
+    height: 200px;
   }
 }
