--- a/src/components/BigComponents/Sections/Left/MiddleSection.module.css
+++ b/src/components/BigComponents/Sections/Left/MiddleSection.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(226, 226, 226);
+  background-color: #fff;
   margin-top: 20px;
   border-radius: 5px;
   width: 100%;
@@ -10,8 +10,10 @@
 }
 
 .container img {
+  height: 500px;
   width: auto;
-  height: 400px;
+  object-fit: cover;
+  border-radius: 5px;
 }
 
 .description {
@@ -24,22 +26,34 @@
   font-weight: normal;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 1200px) {
   .container {
-    height: 400px;
+    height: 450px;
   }
 
   .container img {
-    height: 250px;
+    height: 450px;
+    max-width: 700px;
   }
 }
 
-@media (max-width: 450px) {
+@media (max-width: 800px) {
   .container {
     height: 300px;
   }
 
   .container img {
-    height: 200px;
+    height: 300px;
+    max-width: 450px;
+  }
+}
+@media (max-width: 480px) {
+  .container {
+    height: 290px;
+  }
+
+  .container img {
+    height: 290px;
+    max-width: 400px;
   }
 }
