--- a/src/components/Cards/MySingleAdCard.module.css
+++ b/src/components/Cards/MySingleAdCard.module.css
@@ -4,12 +4,12 @@
   box-shadow: 1px 1px 3px gray;
   cursor: pointer;
   margin: 15px;
+  background-color: #fff;
 }
 
 .imgContainer {
   display: flex;
   justify-content: center;
-  background-color: rgb(226, 226, 226);
   height: 220px;
   width: 300px;
   border-radius: 5px;
@@ -24,7 +24,7 @@
 
 .adContainer {
   background-color: #fff;
-  padding: 20px;
+  padding: 20px 20px 0 20px;
   border-radius: 5px;
 }
 
@@ -77,4 +77,23 @@
 
 .lowerSection button:hover {
   background-color: red;
+}
+
+.modifyContainer {
+  height: 20px;
+}
+
+.modify {
+  display: flex;
+  justify-content: center;
+  margin-top: 15px;
+  background-color: #1aa78e;
+  padding: 10px;
+  font-size: 22px;
+  border-radius: 5px;
+  transition: 0.3s ease-in;
+}
+
+.modify:hover {
+  background-color: #fcaf01;
 }
